# bmc

crate/: Cargo.toml
crate/src/: highlight.rs  instructions.rs  lexer.rs  lib.rs  machine_code.rs  main.rs
crate/src/memory/: mod.rs
