[package]
name = "bmc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ariadne = "0.4.0"
clap = { version = "4.4.18", features = ["derive"] }
colored = "2.1.0"
logos = "0.13.0"
num-derive = "0.4.1"
num-traits = "0.2.17"
